--- a/clusters/my-cluster/podinfo-source.yaml
+++ b/clusters/my-cluster/podinfo-source.yaml
@@ -8,4 +8,5 @@ spec:
   interval: 30s
   ref:
     branch: master
-  url: https://github.com/kimcol/podinfo-app
+  #url: https://github.com/Selvamraju007/podinfo-app
+  url: https://github.com/stefanprodan/podinfo
